[gd_scene load_steps=11 format=3 uid="uid://b8f1jfottu5qr"]

[ext_resource type="Texture2D" uid="uid://c804p0l5twdor" path="res://assets/visual/ui/menu_background.png" id="1_ub1dg"]
[ext_resource type="Script" path="res://scripts/choose_level.gd" id="2_2ugpp"]
[ext_resource type="FontFile" uid="uid://bspmm0n21y6lk" path="res://assets/visual/ui/fonts/Adventurer.ttf" id="2_oulu3"]
[ext_resource type="Texture2D" uid="uid://bb3eitpdcicub" path="res://assets/visual/codex/lvl1.png" id="3_4gbwm"]
[ext_resource type="StyleBox" uid="uid://duo75jtgyjyja" path="res://assets/visual/ui/button_hover.tres" id="3_etbte"]
[ext_resource type="StyleBox" uid="uid://smmi05u2sptw" path="res://assets/visual/ui/button_normal.tres" id="3_veuha"]
[ext_resource type="StyleBox" uid="uid://be002jyylrapi" path="res://assets/visual/ui/button_pressed.tres" id="5_14gg1"]
[ext_resource type="Texture2D" uid="uid://cm440ti42lfh0" path="res://assets/visual/codex/lvl2.png" id="5_i8ne6"]
[ext_resource type="Texture2D" uid="uid://bqsm8uoiwvi0v" path="res://assets/visual/codex/lvl3.png" id="6_5ot47"]
[ext_resource type="StyleBox" uid="uid://bye4n6is48fjs" path="res://assets/visual/ui/button_disabled.tres" id="6_6n1jl"]

[node name="TextureRect" type="TextureRect"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_ub1dg")
script = ExtResource("2_2ugpp")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("2_oulu3")
theme_override_font_sizes/font_size = 40
text = "Choose a level"
horizontal_alignment = 1

[node name="Level1" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 144)
layout_mode = 2
focus_mode = 0
theme_override_fonts/font = ExtResource("2_oulu3")
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = ExtResource("3_veuha")
theme_override_styles/hover = ExtResource("3_etbte")
theme_override_styles/pressed = ExtResource("5_14gg1")
theme_override_styles/disabled = ExtResource("6_6n1jl")
text = "Level 1: 
The City "
icon = ExtResource("3_4gbwm")
icon_alignment = 2

[node name="Level2" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 144)
layout_mode = 2
focus_mode = 0
theme_override_fonts/font = ExtResource("2_oulu3")
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = ExtResource("3_veuha")
theme_override_styles/hover = ExtResource("3_etbte")
theme_override_styles/pressed = ExtResource("5_14gg1")
theme_override_styles/disabled = ExtResource("6_6n1jl")
disabled = true
text = "Level 2: 
The Woods "
icon = ExtResource("5_i8ne6")
icon_alignment = 2

[node name="Level3" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 144)
layout_mode = 2
focus_mode = 0
theme_override_fonts/font = ExtResource("2_oulu3")
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = ExtResource("3_veuha")
theme_override_styles/hover = ExtResource("3_etbte")
theme_override_styles/pressed = ExtResource("5_14gg1")
theme_override_styles/disabled = ExtResource("6_6n1jl")
disabled = true
text = "Level 3 : 
The Cursed Graveyard"
icon = ExtResource("6_5ot47")
icon_alignment = 2

[node name="Level4" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
focus_mode = 0
theme_override_fonts/font = ExtResource("2_oulu3")
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = ExtResource("3_veuha")
theme_override_styles/hover = ExtResource("3_etbte")
theme_override_styles/pressed = ExtResource("5_14gg1")
theme_override_styles/disabled = ExtResource("6_6n1jl")
text = "Back"
icon_alignment = 2

[connection signal="button_up" from="MarginContainer/VBoxContainer/Level1" to="." method="pick_level" binds= [1]]
[connection signal="button_up" from="MarginContainer/VBoxContainer/Level2" to="." method="pick_level" binds= [2]]
[connection signal="button_up" from="MarginContainer/VBoxContainer/Level3" to="." method="pick_level" binds= [3]]
[connection signal="button_up" from="MarginContainer/VBoxContainer/Level4" to="." method="_on_back_button_up"]
